Fix lobby popup not showing in free layout

--- a/project/src/styl/seek.styl
+++ b/project/src/styl/seek.styl
@@ -2,5 +2,3 @@
   text-align center
   margin-top 2em
 
-.nb_players
-  color gold
